fix superfluous closing section tag and align send button with rest of form

--- a/assets/style.css
+++ b/assets/style.css
@@ -91,3 +91,7 @@ header nav ul li {
     margin-right: 20px; 
     text-align: right; 
 }
+
+#contact-form button {
+    margin-left: 120px;
+}
